# subscription-revenue-modelling-dbt

./: .gitignore  README.md  packages-lock.yml  packages.yml  pyproject.toml
.github/: pull_request_template.md
arr_modeling/: dbt_project.yml
arr_modeling/models/marts/: _marts__models.yml  fct_monthly_arr.sql
arr_modeling/models/staging/: _stg__models.yml  stg_subscriptions.sql  stg_subscriptions_quarantine.sql
arr_modeling/seeds/: raw_subscriptions.csv
arr_modeling/tests/: assert_deal_close_before_start.sql  assert_no_negative_arr.sql  assert_valid_subscription_dates.sql
scripts/: BI_queries.py  app.py
